--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
   <a href="#5" id="4">Y en los no tan agradables</a>
   <a href="#6" id="5">Por apoyarme en mi fortalezas...</a>
   <a href="#7" id="6">Y en mis debilidades</a>
-  <a href="#8" id="7">Gracias por ser mi mamá. ¡Te quiero mucho! ¡Feliz Día de la Madre!</a>
+  <a href="#8" id="7">Gracias por ser mi mamá. ¡Te quiero mucho! ¡Feliz Día de la Madre💖!</a>
   <a href="#1" id="8"><img src="madre.jpg" class="centrada"></a>
 
   
-  
-  <div class='made-with-love'>
-    HECHO 
-     <span>♥</span>
-    POR MABEL OLIVERA
+
   
   
   </div>
