--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
+
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Happy Mothers Day encodedmabel</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
 
-  <a href="#2" id="1">¡Hola mamá! ¡Decidi hacerte algo!</a>
-  <a href="#3" id="2">Gracias por estar siempre ahí para mi...</a>
+  <a href="#2" id="1">¡Hola mamá! ¡Decidí hacerte algo!</a>
+  <a href="#3" id="2">Gracias por estar siempre ahí para mí...</a>
   <a href="#4" id="3">En los buenos momentos </a>
   <a href="#5" id="4">Y en los no tan agradables</a>
-  <a href="#6" id="5">Por apoyarme en mi fortalezas...</a>
+  <a href="#6" id="5">Por apoyarme en mis fortalezas...</a>
   <a href="#7" id="6">Y en mis debilidades</a>
-  <a href="#8" id="7">Gracias por ser mi mamá. ¡Te quiero mucho! ¡Feliz Día de la Madre💖!</a>
+  <a href="#8" id="7">Gracias por ser mi mamá. ¡Te quiero mucho! ¡Feliz Día de la Madre!</a>
   <a href="#1" id="8"><img src="madre.jpg" class="centrada"></a>
 
-  
-
-  
-  
+  <!-- Reproductor oculto de YouTube -->
+  <div style="display:none;">
+    <iframe 
+      width="0" 
+      height="0"
+      src="https://www.youtube.com/embed/F7B9Nq01tKs?start=95&autoplay=1"
+      title="YouTube video player"
+      frameborder="0"
+      allow="autoplay; encrypted-media"
+      allowfullscreen>
+    </iframe>
   </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'> 
-  </script> 
-    <script src='script.js'> 
-    </script> 
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
+  <script src="script.js"></script> 
 
 </body>
 </html>
+
+
