--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
     <a href="#1" id="8"><img src="madre.jpg" class="centrada"></a>
   </div>
 
-  <div class="video-container">
-    <iframe 
-      src="https://www.youtube.com/embed/F7B9Nq01tKs?start=95&autoplay=1"
+  <!-- Corazones animados -->
+  <div class="hearts"></div>
+
+  <!-- Reproductor de YouTube (Oculto) -->
+  <div style="display: none;">
+    <iframe id="musicPlayer"
+      src="https://www.youtube.com/embed/F7B9Nq01tKs?start=94&autoplay=1"
       title="YouTube video player"
       frameborder="0"
       allow="autoplay; encrypted-media"
@@ -31,5 +35,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
